third_party/rust/chromium_crates_io/vendor/num_enum-v0_7/tests/try_build/compile_fail/missing_default.rs
#[derive(num_enum::FromPrimitive)]
#[repr(u8)]
enum Numbers {
    Zero,
    One,
    Two,
}

fn main() {

}
